[build-system]
requires = ["poetry-core>=1.0.0", ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "charming-traceback"

version = "0.0.0-dev"
description = "Rich traceback adapted for PyCharm IDE by JetBrains"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
python-testing-utilities = "^0.6.0"

[tool.poetry.group.dev.dependencies]
python-ci-toolkit = ">=0.30.3"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(asctime)s,%(msecs)03d] %(name)-40.40s %(levelname)s %(message)s"
addopts = "--color=yes"
